[package]
name = "TailTerm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# qmetaobject = "0.2.10"
tokio = "1.35.0"
nix = { version = "0.27.1", features = ["process", "term", "fs"] }
libc = "0.2.150"
gtk = "0.18.1"
glib = "0.18.4"
